# adhoc

./: .gitignore  .travis.yml  LICENCE.txt  README.md  buildspec.yml  conda.yaml  pyproject.toml  requirements-local.txt  requirements.txt  setup.py  setup_all.sh
.dvc/: config
ad_hoc/: modeling.py  processing.py  utilities.py
adhoc/: modeling.py  processing.py  utilities.py
data/: .gitignore  adult.csv.dvc  feature_matrix.pkl.dvc
notebooks/: altair-samples.ipynb  altair-samples.py  sample-diagrams.ipynb  sample-diagrams.py  usage-modeling.ipynb  usage-modeling.py  usage-processing.ipynb  usage-processing.py
script/: install_aws_cli.sh
test/: test_data.py  test_modeling.py  test_processing.py  test_utilities.py
